package com.company._240306_PreExamen;

public class Capitan {
    private String nombre;
    private String apellido;
    private Integer matriculaNavegacion;

    public Capitan(String nombre, String apellido, Integer matriculaNavegacion) {
        this.nombre = nombre;
        this.apellido = apellido;
        this.matriculaNavegacion = matriculaNavegacion;
    }
}
