package com.company._240306_PreExamen;

public interface Comparable {
    int compareTo(Object o);
}
